Update photo captions

--- a/src/content/photography/01. Sanur beach.md
+++ b/src/content/photography/01. Sanur beach.md
@@ -9,3 +9,4 @@ emoji: 🌅
 orientation: "landscape"
 ---
 
+Compared to other parts of Bali, I enjoy Sanur the most. It is slow-paced, calm, and in it is my favorite guest house. One day, I would love to live in Sanur so that I can enjoy tranquil morning walks and enjoy the sunrise. However, the lack of public transport really frustates me.
