--- a/src/content/photography/02. hanoi lake.md
+++ b/src/content/photography/02. hanoi lake.md
@@ -8,4 +8,7 @@ draft: false
 emoji: 🐢
 orientation: "landscape"
 ---
+Dearest gentle reader,
 
+They say a very old turtle once lived in this lake. When it died, the whole nation was in sorrow. 
+I visited this spot during my coffee tour on my second-to-last day in Hanoi.
