--- a/src/content/photography/04. Cianjur school boys.md
+++ b/src/content/photography/04. Cianjur school boys.md
@@ -9,3 +9,4 @@ emoji: 🎒
 orientation: "landscape"
 ---
 
+For work, I visited a school by a paddy field in Cianjur. Fun fact, this was the first time I visited Cianjur, after 4 hours of travel bus ride passing through Puncak.
