--- a/src/content/photography/05. Jakarta KRL.md
+++ b/src/content/photography/05. Jakarta KRL.md
@@ -9,3 +9,4 @@ emoji: 🚃
 orientation: "landscape"
 ---
 
+In the city where roads are often gridlocked, the Commuter Line train is an integral part of people's lives. Including mine. It's cheap and fast, but during rush hour you have to bear with the crowd. Sometimes it's so full that my feet can't even touch the floor. (This photo was taken just before rush hour at a relatively less-crowded station, during my internship period at the Indonesian MoFA.)
