--- a/src/content/photography/07. Namur cable car.md
+++ b/src/content/photography/07. Namur cable car.md
@@ -9,3 +9,4 @@ emoji: 🚡
 orientation: "portrait"
 ---
 
+I visited Namur on a whim-- I did not know where to go when I woke in the morning with an urgent feeling of going somewhere. My husband met a guy who teaches in Namur, and he say Namur is a must in Belgium. And boy I do love it! Especially because I visited when it was snowing gently for hours. The citadelle became a winter wonderland.
