--- a/src/content/photography/08. Leuven make love.md
+++ b/src/content/photography/08. Leuven make love.md
@@ -9,3 +9,4 @@ emoji: ❤️
 orientation: "portrait"
 ---
 
+My floor mates and I went out to play with the snow. This was the first time I engaged with snow, properly! 
