--- a/src/content/photography/09. Plitvice boat.md
+++ b/src/content/photography/09. Plitvice boat.md
@@ -5,7 +5,8 @@ image: ./Plitvice boat.png
 location: "Plitvice, HR"
 featured: false
 draft: false
-emoji: ⛵
+emoji: ❄️
 orientation: "portrait"
 ---
 
+Plitvice national park was really beautiful.
