--- a/src/content/photography/12. Paris clock d'orsay.md
+++ b/src/content/photography/12. Paris clock d'orsay.md
@@ -3,9 +3,10 @@ title: "Parisian Streets"
 date: 2025-11-15
 image: ./Paris clock d'orsay.jpg
 location: "Paris, FR"
-featured: false
+featured: true
 draft: false
 emoji: 🗼
 orientation: "landscape"
 ---
 
+When I went to Paris, I skipped going to the Louvre and went to D'Orsay instead because I wanted to see more of Van Gogh's and Monet's painting. Would you believe me if I say I teared up a little bit? Actually, a lot. After learning about Van Gogh's life in his museum in Amsterdam, I now have a soft spot for him. I truly admire his way of seeing the world, finding beauty in the simple things... despite the hard life he had. When I read his letter to his brother, I felt like hugging him so hard. Van Gogh's now my favourite.
