--- a/src/content/photography/13. Antwerp station.md
+++ b/src/content/photography/13. Antwerp station.md
@@ -9,3 +9,4 @@ emoji: 🚂
 orientation: "portrait"
 ---
 
+Antwerp's central station is frikkin gorgeus, it has god-knows-how-many floors of perrons. I like this specific photo because it looks like a TV show poster lol.
