--- a/src/content/photography/15. Snowboy in Namur.md
+++ b/src/content/photography/15. Snowboy in Namur.md
@@ -9,3 +9,4 @@ emoji: ⛄
 orientation: "portrait"
 ---
 
+I found this little snowman and Mandy Moore's song instantly played in my head because to me he looked like he was on top of the world, seizing the day.
