--- a/src/content/photography/03. Sukabumi shoreline.md
+++ b/src/content/photography/03. Sukabumi shoreline.md
@@ -5,7 +5,10 @@ image: ./Sukabumi shoreline.jpg
 location: "Sukabumi, ID"
 featured: false
 draft: false
-emoji: 🏔️
+emoji: 🌊
 orientation: "landscape"
 ---
 
+During a long weekend, I visited Ciletuh Geopark with some friends. This photo was taken at Puncak Darma, a.k.a. Darma Summit, one of the viewing spots looking out to the shoreline. Our driver said that the place where we stood was the ancient shoreline, but now the water level has gone down. Along the way, we saw the beautiful natural landscape of the apparently vast geopark.
+
+Ah, I truly love the blue/green colour combo.
