--- a/src/content/photography/06. Leuven bumper car.md
+++ b/src/content/photography/06. Leuven bumper car.md
@@ -9,3 +9,4 @@ emoji: 🏎️
 orientation: "landscape"
 ---
 
+Saw an interesting ride at the Leuven Fun Fair. It looked like a love child of Korean's disco pang pang and rollercoaster. My husband and I tried riding it (after much convincing work from my side) and it was awesome, as it is go forward AND backward. What a ride!
