--- a/src/content/photography/11. Brussels bookstore.md
+++ b/src/content/photography/11. Brussels bookstore.md
@@ -9,3 +9,4 @@ emoji: 📚
 orientation: "landscape"
 ---
 
+This is one of the okay-est shot using my new camera. I got myself a secondhand EOS M 1000, a 10-ish year old camera, to help me learn photography. I really like doing a street photography session, but most of the time I'm too shy to get close to my subject... even though I only get a f2 lens. 
