--- a/src/content/writing/2013-02-21-februari.md
+++ b/src/content/writing/2013-02-21-februari.md
@@ -1,8 +1,9 @@
 ---
 title: "Februari"
-date: "2013-02-21"
-categories: 
-  - "tak-berkategori"
+date: 2013-02-21
+type: "journal"
+excerpt: "Bulan ini, hujan turun dan menjadi latar banyak cerita. Tentang melepaskan tanpa melupakan, dan belajar menyukai hujan."
+tags: ["poetry", "rain", "letting-go"]
 ---
 
 Bulan ini, hujan turun dan menjadi latar banyak cerita bagi orang-orang di sekitarku. Dalam cerita-cerita itu, hujan menenani mereka menangis dan mendekatkan hati-hati yang jauh.  
