--- a/src/content/writing/2015-03-12-ff-1.md
+++ b/src/content/writing/2015-03-12-ff-1.md
@@ -1,14 +1,9 @@
 ---
 title: "FF #1"
-date: "2015-03-12"
-categories: 
-  - "tak-berkategori"
-tags: 
-  - "but-really-tho"
-  - "flashfiction"
-  - "not-really"
-  - "ok"
-  - "whatever"
+date: 2015-03-12
+type: "journal"
+excerpt: "A flash fiction about being good at reading people, except the person in the mirror. About unrequited feelings."
+tags: ["flash-fiction", "unrequited-love", "writing"]
 ---
 
 I’ve always been good at reading people.
